# ai-engineering-buildcamp-code

./: pyproject.toml
01-foundation/02-rag/: rag.ipynb
01-foundation/03-structured-output/: notebook.ipynb
01-foundation/05-alternatives/: groq.ipynb  rag.py
02-rag-usecases-tech/02-faq-assistant/: notebook.ipynb
02-rag-usecases-tech/03-youtube/: notebook.ipynb
02-rag-usecases-tech/04-math-book/: extraction-clean.ipynb  page-text-extraction.ipynb
03-agents/02-agent-basics/: qna-loop.ipynb  tool-call-loop.ipynb
documentation-agent/: app.py
