[project]
name = "ai-engineering-buildcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
]
